# vulkano_graphics_example

./: Cargo.toml
src/: custom_image.rs  main.rs  stupid_word.rs
src/shaders/: clear_to_green.rs  fs.rs  mod.rs  vs.rs
